# Augustus

./: .gitignore  README.md  install-counter.json  package-lock.json  package.json
.claude/: settings.json  settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
backend/: augustus.spec  build_backend.py  pyproject.toml  requirements.txt
backend/augustus/: __init__.py  config.py  exceptions.py  main.py  utils.py
backend/augustus/api/: app.py  dependencies.py
backend/augustus/api/routes/: __init__.py  activity.py  agents.py  annotations.py  evaluator_prompts.py  events.py  flags.py  orchestrator.py  proposals.py  search.py  sessions.py  settings.py  trajectories.py  usage.py
backend/augustus/db/: __init__.py  chroma_store.py  schema.sql  sqlite_store.py
backend/augustus/mcp/: server.py
backend/augustus/models/: __init__.py  dataclasses.py  enums.py
backend/augustus/orchestrator/: loop.py
backend/augustus/services/: agent_registry.py  evaluator.py  handoff_engine.py  memory.py  queue_manager.py  schema_parser.py  session_manager.py  tier_enforcer.py  yaml_generator.py
backend/augustus/services/llm/: __init__.py  anthropic_client.py  base.py  gemini_client.py
electron/: main.js  package-lock.json  package.json  preload.js
frontend/: index.html  package-lock.json  package.json  vite.config.ts
mcp-extension/: build-mcpb.py  manifest.json
scripts/: backend.sh  kill-port.py  release.sh  restart-backend.sh
tests/: conftest.py
views/: augustus-agent-detail.html  augustus-agents.html  augustus-coactivation-flags.html  augustus-dashboard.html  (+5 more)
(+81 files in other folders)
